--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="resources/js/CSS3DArgonRenderer.js"></script>
 	<script src="resources/js/aframe-look-at-component.js"></script>
 	<script src="resources/js/aframe-animation-component.min.js"></script>
+	<script src="resources/js/aframe-partical-system-component.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
 	<title>GA Tech Time Museum</title>
 </head>
@@ -72,7 +73,7 @@
 		<a-entity camera look-controls wasd-controls >
 		
 		<!-- <ar-camera> -->
-			<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 1000"
+			<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 2000"
 			position="0 0 -0.1"
 			geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
 			scale="1 1 1"
@@ -104,9 +105,8 @@
 			<a-entity id="future" position="0 74.5 0">
 				<a-entity id="portalObject">
 					<!-- <a-sphere class= "clickable" radius="1" opacity ="0" position="0 -2 0"></a-sphere> -->
-					<a-box id="portal-plane" cursor-listener width= "10" height="1" depth="10" position="0 -31 0"></a-box>
-					<a-box id="portal" cursor-listener width= "10" height="10" depth="10" position="0 20 0"></a-box>
-					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10  ">
+					<a-box id="portal-plane" cursor-listener width= "12" height="1" depth="12" position="0 -36 0" opacity="0"></a-box>
+					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10" position="0 -15 0">
 						<a-animation   attribute="rotation"
 						from= "0 0 0"
 						to="360 0 360"
@@ -115,7 +115,7 @@
 						repeat="indefinite"
 						></a-animation>
 					</a-obj-model>
-					<a-obj-model id= "middleRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "9 9 9 ">
+					<a-obj-model id= "middleRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "9 9 9" position="0 -15 0">
 						<a-animation   attribute="rotation"
 						from= "0 0 0"
 						to="0 360 360"
@@ -124,7 +124,7 @@
 						repeat="indefinite"
 						></a-animation>
 					</a-obj-model>
-					<a-obj-model id= "innerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "8 8 8">
+					<a-obj-model id= "innerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "8 8 8" position="0 -15 0">
 						<a-animation   attribute="rotation"
 						from= "0 0 0"
 						to="360 360 0"
@@ -133,7 +133,9 @@
 						repeat="indefinite"
 						></a-animation>
 					</a-obj-model>
+					<!-- <a-entity position="0 -65 0" particle-system="color: #00EF00,#CCCC00; direction:-1;type:2;size:0.5;preset: dust"></a-entity> -->
 				</a-entity>
+
 
 				<a-sphere id="room" src ="#roomPano" radius="25" opacity="0" side="double">
 					
