--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
 	<!-- Seed Card -->
 	<div hidden>
-	<div id="seedTitle" visible="true" class="textbox">Check out this seed!<br><br><br><br><br><br></div>
+		<div id="seedTitle" visible="true" class="textbox">Check out this seed!<br><br><br><br><br><br></div>
+		<img src="resources/images/SeedPod.jpg" id="seedBlurb" visible="false" style="width:304px;height:228px;"></img>
 	</div>
-	<img src="src/images/SeedPod.jpg" id="seedBlurb" visible="false" style="width:304px;height:228px;"></img>
 
 	<ar-scene vr-mode-ui>
 		<a-assets>
@@ -66,14 +66,14 @@
 		<a-entity light="type: ambient; color: #CCC" intensity="3"></a-entity>
 		<!-- <a-entity id="camera"> -->
 <!-- 		<a-entity camera look-controls wasd-controls >
- -->		
-		<ar-camera>
-			<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 2000"
-			position="0 0 -0.1"
-			geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
-			scale="1 1 1"
-			rotation="0 0 90"
-			material="color: #6666FF; shader:flat;opacity:0.8;">
+-->		
+<ar-camera>
+	<a-entity id="myCursor" cursor="fuse:true; fuse-timeout: 2000"
+	position="0 0 -0.1"
+	geometry="primitive:ring; radiusInner: 0.0025; radiusOuter: 0.00375; thetaStart: 0; thetaLength: 360;"
+	scale="1 1 1"
+	rotation="0 0 90"
+	material="color: #6666FF; shader:flat;opacity:0.8;">
 				<!-- <a-animation begin="cursor-fusing"
 				attribute="geometry.thetaLength"
 				easing="ease-in-out-cubic"
@@ -92,63 +92,63 @@
 			</a-entity> 
 		</ar-camera>
 <!-- 		</a-entity>
- -->
-		<a-entity id="sky">
+-->
+<a-entity id="sky">
 
-			<a-sphere id="quad" src ="#quadPano" radius="100" opacity="0" side="double" selectable="false"></a-sphere>
+	<a-sphere id="quad" src ="#quadPano" radius="100" opacity="0" side="double" selectable="false"></a-sphere>
 
-			<a-entity id="future" position="0 74.5 0">
-				<a-entity id="portalObject">
-					<!-- <a-sphere class= "clickable" radius="1" opacity ="0" position="0 -2 0"></a-sphere> -->
-					<a-box id="portal-plane" cursor-listener width= "12" height="1" depth="12" position="0 -36 0" opacity="0"></a-box>
-					<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10" position="0 -15 0">
-						<a-animation   attribute="rotation"
-						from= "0 0 0"
-						to="360 0 360"
-						dur="5000"
-						easing="linear"
-						repeat="indefinite"
-						></a-animation>
-					</a-obj-model>
-					<a-obj-model id= "middleRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "9 9 9" position="0 -15 0">
-						<a-animation   attribute="rotation"
-						from= "0 0 0"
-						to="0 360 360"
-						dur="5000"
-						easing="linear"
-						repeat="indefinite"
-						></a-animation>
-					</a-obj-model>
-					<a-obj-model id= "innerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "8 8 8" position="0 -15 0">
-						<a-animation   attribute="rotation"
-						from= "0 0 0"
-						to="360 360 0"
-						dur="5000"
-						easing="linear"
-						repeat="indefinite"
-						></a-animation>
-					</a-obj-model>
-					<!-- <a-entity position="0 -65 0" particle-system="color: #00EF00,#CCCC00; direction:-1;type:2;size:0.5;preset: dust"></a-entity> -->
-				</a-entity>
-
-
-				<a-sphere id="room" src ="#roomPano" radius="25" opacity="0" side="double">
-					
-					<!-- Seed Artifact -->
-					<a-entity position="4 -1 -15">
-						<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 0 0" position="0 0 0"></a-entity>  
-						<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 0 0" position="0 0 0" visible='false'></a-entity>
-						<a-box opacity="1" id="seedMouseBox" curseor-listener blurb-view-close-seed color='#BB00FF' position="0 0 0" height="5" width="10" depth="0" rotation="0 0 0" position="0 0 0"></a-box>
-						<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
-						<a-sphere opacity="0" cursor-listener blurb-view-opener-seed position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
-					</a-entity>
-
-				</a-sphere>
-
-			</a-entity>
+	<a-entity id="future" position="0 74.5 0">
+		<a-entity id="portalObject">
+			<!-- <a-sphere class= "clickable" radius="1" opacity ="0" position="0 -2 0"></a-sphere> -->
+			<a-box id="portal-plane" cursor-listener width= "12" height="1" depth="12" position="0 -36 0" opacity="0"></a-box>
+			<a-obj-model id= "outerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "10 10 10" position="0 -15 0">
+				<a-animation   attribute="rotation"
+				from= "0 0 0"
+				to="360 0 360"
+				dur="5000"
+				easing="linear"
+				repeat="indefinite"
+				></a-animation>
+			</a-obj-model>
+			<a-obj-model id= "middleRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "9 9 9" position="0 -15 0">
+				<a-animation   attribute="rotation"
+				from= "0 0 0"
+				to="0 360 360"
+				dur="5000"
+				easing="linear"
+				repeat="indefinite"
+				></a-animation>
+			</a-obj-model>
+			<a-obj-model id= "innerRing" src="#portalRing-obj" mtl="#portalRing-mtl"  scale = "8 8 8" position="0 -15 0">
+				<a-animation   attribute="rotation"
+				from= "0 0 0"
+				to="360 360 0"
+				dur="5000"
+				easing="linear"
+				repeat="indefinite"
+				></a-animation>
+			</a-obj-model>
+			<!-- <a-entity position="0 -65 0" particle-system="color: #00EF00,#CCCC00; direction:-1;type:2;size:0.5;preset: dust"></a-entity> -->
 		</a-entity>
-	</ar-scene>
 
-	<script src="resources/js/gttm.js"></script>
+
+		<a-sphere id="room" src ="#roomPano" radius="25" opacity="0" side="double">
+			
+			<!-- Seed Artifact -->
+			<a-entity position="4 -1 -15">
+				<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" rotation="0 0 0" position="0 0 0"></a-entity>  
+				<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" rotation="0 0 0" position="0 0 0" visible='false'></a-entity>
+				<a-box opacity="1" id="seedMouseBox" curseor-listener blurb-view-close-seed color='#BB00FF' position="0 0 0" height="5" width="10" depth="0" rotation="0 0 0" position="0 0 0"></a-box>
+				<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
+				<a-sphere opacity="0" cursor-listener blurb-view-opener-seed position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
+			</a-entity>
+
+		</a-sphere>
+
+	</a-entity>
+</a-entity>
+</ar-scene>
+
+<script src="resources/js/gttm.js"></script>
 </body>
 </html>
