--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 	<!-- Seed Card -->
 	<div hidden>
-		<div id="seedTitle" visible="true" class="textbox">Check out this seed!<br><br><br><br><br><br></div>
+		<div id="seedTitle" visible="true" class="textbox">Check out this seed!<br><br><br><br></div>
 		<img src="resources/images/SeedPod.jpg" id="seedBlurb" visible="false" style="width:100px;height:100px;"></img>
 	</div>
 
@@ -142,7 +142,7 @@
 			<a-entity position="10 0 0" rotation="0 -90 0">
 				<a-entity id="seedTitleCSS" css-object="div: #seedTitle" scale="0.1 0.1 0.1" position="0 0 0"></a-entity>  
 				<a-entity id="seedBlurbCSS" css-object="div: #seedBlurb" scale=".1 .1 .1" position="0 0 0" visible='false'></a-entity>
-				<a-box opacity="1" id="seedMouseBox" curseor-listener blurb-view-close-seed
+				<a-box opacity="0" id="seedMouseBox" curseor-listener blurb-view-close-seed
 						color='#BB00FF' position="0 0 0" height="5" width="10" depth="0" " position="0 0 0"></a-box>
 				<a-obj-model id="seedPod" src="#SeedPod-obj" mtl="#SeedPod-mtl" opacity="0"></a-obj-model>
 				<a-sphere opacity="0" cursor-listener blurb-view-opener-seed position="0 0 0" radius="2" color="#FFFAFA"></a-sphere>
